fixed a bug with transaction result alert placement/visibility, reduced the time this alert remains visible

--- a/ui/style.css
+++ b/ui/style.css
@@ -494,7 +494,7 @@ label{
 }
 #result{
     position: absolute;
-    top: 20px;
+    top: 620px;
     width: 820px;
     padding: 25px 40px;
     font-size: 16px;
